Created DTO's and Structured Project Implementation with DTO's and FeignClient.